--- a/secruity-aut-dev.properties
+++ b/secruity-aut-dev.properties
@@ -1,3 +1,16 @@
 
 yto.port=20003
 yto.name=zlc
+
+eureka-ip=192.168.202.43
+
+eureka-port=9999
+
+master-db-url=jdbc:mysql://192.168.202.43:3306/MyTest?useUnicode=true&characterEncoding=utf-8&useSSL=false
+master-db-username=root
+master-db-password=youdbpassword
+master-db-driver=com.mysql.jdbc.Driver
+master-db-initalSize=20
+master-minIdle=30
+master-maxActive=60
+master-maxWait=60000
