--- a/secruity-aut-dev.properties
+++ b/secruity-aut-dev.properties
@@ -15,4 +15,4 @@ master-minIdle=30
 master-maxActive=60
 master-maxWait=60000
 
-web.ignoring.matchers=/css/**;/images/**;/js/**;/favicon.ico;/druid/login.html;/swagger-ui.html;/swagger-resources/**;/v2/**;/webjars/**
+web.ignoring.matchers=/css/**;/images/**;/js/**;/favicon.ico;/druid/**;/druid/login.html;/swagger-ui.html;/swagger-resources/**;/v2/**;/webjars/**
